manifest/istio-default/addons/istio-jeager.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: jaeger
  namespace: istio-system
spec:
  hosts:
    - "jaeger.choshsh.com"
  gateways:
    - default/choshsh-gateway
  http:
    - name: "jaeger"
      route:
        - destination:
            host: tracing
            subset: jaeger-subset
            port:
              number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: jaeger
  namespace: istio-system
spec:
  host: tracing
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
  subsets:
    - name: jaeger-subset
      labels:
        app: jaeger
