manifest/istio-default/addons/istio-kiali-network.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali
  namespace: istio-system
spec:
  hosts:
    - "kiali.choshsh.com"
  gateways:
    - default/choshsh-gateway
  http:
    - name: "kiali"
      route:
        - destination:
            host: kiali
            subset: kiali-subset
            port:
              number: 20001
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: kiali
  namespace: istio-system
spec:
  host: kiali
  trafficPolicy:
    loadBalancer:
      simple: LEAST_CONN
  subsets:
    - name: kiali-subset
      labels:
        app: kiali
